--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iosevka",
-  "version": "27.3.5",
+  "version": "28.0.0-alpha.1",
   "main": "./font-src/index.js",
   "scripts": {
     "build": "verda -f verdafile.mjs",
