Mordvin Letters (Preliminary) (#2088)

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1280,12 +1280,14 @@ rank = 1
 descriptionAffix = "straight shape"
 selectorAffix.X = "straight"
 selectorAffix."X/sansSerif" = "straight"
+selectorAffix."cyrl/Rha/right" = "straight"
 
 [prime.capital-x.variants-buildup.stages.body.curly]
 rank = 2
 descriptionAffix = "curly shape"
 selectorAffix.X = "curly"
 selectorAffix."X/sansSerif" = "curly"
+selectorAffix."cyrl/Rha/right" = "curly"
 
 [prime.capital-x.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -1293,18 +1295,21 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.X = "serifless"
 selectorAffix."X/sansSerif" = "serifless"
+selectorAffix."cyrl/Rha/right" = "serifless"
 
 [prime.capital-x.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs"
 selectorAffix.X = "motionSerifed"
 selectorAffix."X/sansSerif" = "serifless"
+selectorAffix."cyrl/Rha/right" = "serifless"
 
 [prime.capital-x.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix.X = "serifed"
 selectorAffix."X/sansSerif" = "serifless"
+selectorAffix."cyrl/Rha/right" = "serifed"
 
 
 
@@ -3976,6 +3981,7 @@ descriptionAffix = "straight shape"
 selectorAffix.x = "straight"
 selectorAffix."x/sansSerif" = "straight"
 selectorAffix."cyrl/ha" = "straight"
+selectorAffix."cyrl/rha/right" = "straight"
 
 [prime.x.variants-buildup.stages.body.curly]
 rank = 2
@@ -3983,6 +3989,7 @@ descriptionAffix = "curly shape"
 selectorAffix.x = "curly"
 selectorAffix."x/sansSerif" = "curly"
 selectorAffix."cyrl/ha" = "curly"
+selectorAffix."cyrl/rha/right" = "curly"
 
 [prime.x.variants-buildup.stages.body.cursive]
 rank = 3
@@ -3991,6 +3998,7 @@ descriptionAffix = "cursive shape"
 selectorAffix.x = "cursive"
 selectorAffix."x/sansSerif" = "cursive"
 selectorAffix."cyrl/ha" = "cursive"
+selectorAffix."cyrl/rha/right" = "cursive"
 
 [prime.x.variants-buildup.stages.body.semi-chancery-straight]
 rank = 4
@@ -3999,6 +4007,7 @@ descriptionAffix = "Semi-chancery shape with straight counter-leg"
 selectorAffix.x = "semiChanceryStraight"
 selectorAffix."x/sansSerif" = "semiChanceryStraight"
 selectorAffix."cyrl/ha" = "semiChanceryStraight"
+selectorAffix."cyrl/rha/right" = "semiChanceryStraight"
 
 [prime.x.variants-buildup.stages.body.semi-chancery-curly]
 rank = 5
@@ -4007,6 +4016,7 @@ descriptionAffix = "Semi-chancery shape with curly counter-leg"
 selectorAffix.x = "semiChanceryCurly"
 selectorAffix."x/sansSerif" = "semiChanceryCurly"
 selectorAffix."cyrl/ha" = "semiChanceryCurly"
+selectorAffix."cyrl/rha/right" = "semiChanceryCurly"
 
 [prime.x.variants-buildup.stages.body.chancery]
 rank = 6
@@ -4015,6 +4025,7 @@ descriptionAffix = "Chancery shape"
 selectorAffix.x = "chancery"
 selectorAffix."x/sansSerif" = "chancery"
 selectorAffix."cyrl/ha" = "chancery"
+selectorAffix."cyrl/rha/right" = "chancery"
 
 [prime.x.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4023,6 +4034,7 @@ descriptionJoiner = "without"
 selectorAffix.x = "serifless"
 selectorAffix."x/sansSerif" = "serifless"
 selectorAffix."cyrl/ha" = "serifless"
+selectorAffix."cyrl/rha/right" = "serifless"
 
 [prime.x.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
@@ -4030,6 +4042,7 @@ descriptionAffix = "motion serifs"
 selectorAffix.x = "motionSerifed"
 selectorAffix."x/sansSerif" = "serifless"
 selectorAffix."cyrl/ha" = "motionSerifed"
+selectorAffix."cyrl/rha/right" = "serifless"
 
 [prime.x.variants-buildup.stages.serifs.serifed]
 rank = 3
@@ -4037,6 +4050,7 @@ descriptionAffix = "serifs"
 selectorAffix.x = "serifed"
 selectorAffix."x/sansSerif" = "serifless"
 selectorAffix."cyrl/ha" = "serifed"
+selectorAffix."cyrl/rha/right" = "serifed"
 
 
 
@@ -5911,16 +5925,19 @@ next = "openness"
 rank = 1
 descriptionAffix = "straight leg"
 selectorAffix."cyrl/Ya" = "straight"
+selectorAffix."cyrl/Yae/left" = "straight"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.leg.curly]
 rank = 2
 descriptionAffix = "curly leg"
 selectorAffix."cyrl/Ya" = "curly"
+selectorAffix."cyrl/Yae/left" = "curly"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.leg.standing]
 rank = 3
 descriptionAffix = "standing leg (like Helvetica)"
 selectorAffix."cyrl/Ya" = "standing"
+selectorAffix."cyrl/Yae/left" = "standing"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.openness."*"]
 next = "serifs"
@@ -5929,27 +5946,32 @@ next = "serifs"
 rank = 1
 keyAffix = ""
 selectorAffix."cyrl/Ya" = ""
+selectorAffix."cyrl/Yae/left" = ""
 
 [prime.cyrl-capital-ya.variants-buildup.stages.openness.open]
 rank = 2
 descriptionAffix = "open contour"
 selectorAffix."cyrl/Ya" = "open"
+selectorAffix."cyrl/Yae/left" = "open"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix."cyrl/Ya" = "serifless"
+selectorAffix."cyrl/Yae/left" = "serifless"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs at bottom-left"
 selectorAffix."cyrl/Ya" = "bottomRightSerifed"
+selectorAffix."cyrl/Yae/left" = "bottomRightSerifed"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix."cyrl/Ya" = "serifed"
+selectorAffix."cyrl/Yae/left" = "bottomRightSerifed"
 
 
 
@@ -5970,18 +5992,21 @@ rank = 1
 groupRank = 1
 descriptionAffix = "straight leg"
 selectorAffix."cyrl/ya" = "straight"
+selectorAffix."cyrl/yae/left" = "straight"
 
 [prime.cyrl-ya.variants-buildup.stages.leg.curly]
 rank = 2
 groupRank = 2
 descriptionAffix = "curly leg"
 selectorAffix."cyrl/ya" = "curly"
+selectorAffix."cyrl/yae/left" = "curly"
 
 [prime.cyrl-ya.variants-buildup.stages.leg.standing]
 rank = 3
 groupRank = 3
 descriptionAffix = "standing leg (like Helvetica)"
 selectorAffix."cyrl/ya" = "standing"
+selectorAffix."cyrl/yae/left" = "standing"
 
 [prime.cyrl-ya.variants-buildup.stages.openness."*"]
 next = "tails"
@@ -5991,12 +6016,14 @@ rank = 1
 groupRrank = 10
 keyAffix = ""
 selectorAffix."cyrl/ya" = ""
+selectorAffix."cyrl/yae/left" = ""
 
 [prime.cyrl-ya.variants-buildup.stages.openness.open]
 rank = 2
 groupRrank = 20
 descriptionAffix = "open contour"
 selectorAffix."cyrl/ya" = "open"
+selectorAffix."cyrl/yae/left" = "open"
 
 [prime.cyrl-ya.variants-buildup.stages.tails."*"]
 next = "serifs"
@@ -6005,27 +6032,32 @@ next = "serifs"
 rank = 1
 keyAffix = ""
 selectorAffix."cyrl/ya" = ""
+selectorAffix."cyrl/yae/left" = ""
 
 [prime.cyrl-ya.variants-buildup.stages.tails.tailed]
 rank = 2
 descriptionAffix = "tail"
 selectorAffix."cyrl/ya" = "tailed"
+selectorAffix."cyrl/yae/left" = ""
 
 [prime.cyrl-ya.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix."cyrl/ya" = "serifless"
+selectorAffix."cyrl/yae/left" = "serifless"
 
 [prime.cyrl-ya.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs at bottom-left"
 selectorAffix."cyrl/ya" = "bottomRightSerifed"
+selectorAffix."cyrl/yae/left" = "bottomRightSerifed"
 
 [prime.cyrl-ya.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix."cyrl/ya" = "smallCyrl"
+selectorAffix."cyrl/yae/left" = "bottomRightSerifed"
 
 
 
@@ -6625,7 +6657,7 @@ tagKind = "symbol"
 
 [prime.underscore.variants.above-baseline]
 rank = 1
-description = "Extra-high `_`, placed right below baseline"
+description = "Extra-high `_`, placed right above baseline"
 selector.underscore = "aboveBaseline"
 
 [prime.underscore.variants.high]
