Remove earless-rounded variants of hooktop letters

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1832,10 +1832,10 @@ selectorAffix.d = "toothlessRounded"
 selectorAffix."d/sansSerif" = "toothlessRounded"
 selectorAffix."d/phoneticLeft" = "toothed"
 selectorAffix."d/descBase" = "toothed"
-selectorAffix."d/hookBottomBase" = "toothlessRoundedHBB"
+selectorAffix."d/hookBottomBase" = "toothed"
 selectorAffix.dCurlyTail = "toothed"
 selectorAffix.dHookTop = "toothlessRounded"
-selectorAffix."dHookTop/hookBottomBase" = "toothlessRoundedHBB"
+selectorAffix."dHookTop/hookBottomBase" = "toothed"
 selectorAffix."cyrl/djeKomi" = "toothlessRounded"
 
 [prime.d.variants-buildup.stages.body.tailed]
@@ -2166,7 +2166,7 @@ descriptionAffix = "earless (cornered top-right)"
 selectorAffix.g = "earlessCorner"
 selectorAffix."g/sansSerif" = "earlessCorner"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScript/hookTopBase" = "serifless"
+selectorAffix."gScript/hookTopBase" = "earlessCornerHTB"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single" = "earlessCorner"
 
@@ -3169,7 +3169,7 @@ rank = 3
 descriptionAffix = "earless (rounded) shape"
 selectorAffix.p = "earlessRounded"
 selectorAffix."p/sansSerif" = "earlessRounded"
-selectorAffix."p/hookTopBase" = "earlessRounded"
+selectorAffix."p/hookTopBase" = "eared"
 
 [prime.p.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -3239,7 +3239,7 @@ rank = 3
 descriptionAffix = "earless (rounded) shape"
 selectorAffix.q = "earlessRounded"
 selectorAffix."q/sansSerif" = "earlessRounded"
-selectorAffix."q/hookTopBase" = "earlessRounded"
+selectorAffix."q/hookTopBase" = ""
 selectorAffix.qRTail = "earlessRounded"
 
 [prime.q.variants-buildup.stages.terminal."*"]
@@ -3339,7 +3339,7 @@ selectorAffix.r = "earlessCorner"
 selectorAffix."r/sansSerif" = "earlessCorner"
 selectorAffix.rRTail = "earlessCorner"
 selectorAffix."rTurnRTail" = ""
-selectorAffix."rFlap" = "earlessCorner"
+selectorAffix."rFlap" = "earlessRounded"
 selectorAffix."iFishHook" = ""
 
 [prime.r.variants-buildup.stages.body.earless-rounded]
