Improve serifs of three `k`-derived characters.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2473,7 +2473,7 @@ rank = 1
 descriptionAffix = "standard shape"
 selectorAffix.k = "straight"
 selectorAffix."k/sansSerif" = "straight"
-selectorAffix."k/nonCursive" = "straight"
+selectorAffix."latn/kappa" = "straight"
 selectorAffix.kHookTop = "straight"
 selectorAffix.kDescender = "straight"
 selectorAffix."grek/kappa" = "straight"
@@ -2484,7 +2484,7 @@ rank = 2
 descriptionAffix = "curly shape"
 selectorAffix.k = "curly"
 selectorAffix."k/sansSerif" = "curly"
-selectorAffix."k/nonCursive" = "curly"
+selectorAffix."latn/kappa" = "curly"
 selectorAffix.kHookTop = "curly"
 selectorAffix.kDescender = "curly"
 selectorAffix."grek/kappa" = "curly"
@@ -2495,7 +2495,7 @@ rank = 3
 descriptionAffix = "symmetric legs touching the vertical bar"
 selectorAffix.k = "symmetricTouching"
 selectorAffix."k/sansSerif" = "symmetricTouching"
-selectorAffix."k/nonCursive" = "symmetricTouching"
+selectorAffix."latn/kappa" = "symmetricTouching"
 selectorAffix.kHookTop = "symmetricTouching"
 selectorAffix.kDescender = "symmetricTouching"
 selectorAffix."grek/kappa" = "symmetricTouching"
@@ -2506,7 +2506,7 @@ rank = 4
 descriptionAffix = "symmetric legs connected to the vertical bar"
 selectorAffix.k = "symmetricConnected"
 selectorAffix."k/sansSerif" = "symmetricConnected"
-selectorAffix."k/nonCursive" = "symmetricConnected"
+selectorAffix."latn/kappa" = "symmetricConnected"
 selectorAffix.kHookTop = "symmetricConnected"
 selectorAffix.kDescender = "symmetricConnected"
 selectorAffix."grek/kappa" = "symmetricConnected"
@@ -2517,7 +2517,7 @@ rank = 5
 descriptionAffix = "cursive loop"
 selectorAffix.k = "cursive"
 selectorAffix."k/sansSerif" = "cursive"
-selectorAffix."k/nonCursive" = "straight"
+selectorAffix."latn/kappa" = "straight"
 selectorAffix.kHookTop = "cursive"
 selectorAffix.kDescender = "cursive"
 selectorAffix."grek/kappa" = "straight"
@@ -2528,7 +2528,7 @@ rank = 6
 descriptionAffix = "cursive loop plus diagonal tail"
 selectorAffix.k = "cursiveTailed"
 selectorAffix."k/sansSerif" = "cursiveTailed"
-selectorAffix."k/nonCursive" = "straight"
+selectorAffix."latn/kappa" = "straight"
 selectorAffix.kHookTop = "cursiveTailed"
 selectorAffix.kDescender = "cursive"
 selectorAffix."grek/kappa" = "straight"
@@ -2540,7 +2540,7 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.k = "serifless"
 selectorAffix."k/sansSerif" = "serifless"
-selectorAffix."k/nonCursive" = "serifless"
+selectorAffix."latn/kappa" = "serifless"
 selectorAffix.kHookTop = "serifless"
 selectorAffix.kDescender = "serifless"
 selectorAffix."grek/kappa" = "serifless"
@@ -2551,7 +2551,7 @@ rank = 2
 descriptionAffix = "serifs at top left"
 selectorAffix.k = "topLeftSerifed"
 selectorAffix."k/sansSerif" = "serifless"
-selectorAffix."k/nonCursive" = "topLeftSerifed"
+selectorAffix."latn/kappa" = "topLeftSerifed"
 selectorAffix.kHookTop = "serifless"
 selectorAffix.kDescender = "topLeftSerifed"
 selectorAffix."grek/kappa" = "topLeftSerifed"
@@ -2563,10 +2563,10 @@ disableIf = [ { body = "diagonal-tailed-cursive" } ]
 descriptionAffix = "serifs at bottom right"
 selectorAffix.k = "bottomRightSerifed"
 selectorAffix."k/sansSerif" = "serifless"
-selectorAffix."k/nonCursive" = "bottomRightSerifed"
+selectorAffix."latn/kappa" = "bottomRightSerifed"
 selectorAffix.kHookTop = "bottomRightSerifed"
 selectorAffix.kDescender = "serifless"
-selectorAffix."grek/kappa" = "serifless"
+selectorAffix."grek/kappa" = "bottomRightSerifed"
 selectorAffix."grek/kappa/sansSerif" = "serifless"
 
 [prime.k.variants-buildup.stages.serifs.top-left-and-bottom-right-serifed]
@@ -2575,10 +2575,10 @@ disableIf = [ { body = "diagonal-tailed-cursive" } ]
 descriptionAffix = "serifs at top left and bottom right"
 selectorAffix.k = "topLeftAndBottomRightSerifed"
 selectorAffix."k/sansSerif" = "serifless"
-selectorAffix."k/nonCursive" = "topLeftAndBottomRightSerifed"
+selectorAffix."latn/kappa" = "topLeftAndBottomRightSerifed"
 selectorAffix.kHookTop = "bottomRightSerifed"
 selectorAffix.kDescender = "topLeftSerifed"
-selectorAffix."grek/kappa" = "topLeftSerifed"
+selectorAffix."grek/kappa" = "topLeftAndBottomRightSerifed"
 selectorAffix."grek/kappa/sansSerif" = "serifless"
 
 [prime.k.variants-buildup.stages.serifs.serifed]
@@ -2587,10 +2587,10 @@ disableIf = [ { body = "diagonal-tailed-cursive" } ]
 descriptionAffix = "serifs"
 selectorAffix.k = "serifed"
 selectorAffix."k/sansSerif" = "serifless"
-selectorAffix."k/nonCursive" = "serifed"
+selectorAffix."latn/kappa" = "serifedKra"
 selectorAffix.kHookTop = "serifed"
 selectorAffix.kDescender = "serifed"
-selectorAffix."grek/kappa" = "topLeftSerifed"
+selectorAffix."grek/kappa" = "serifedKappa"
 selectorAffix."grek/kappa/sansSerif" = "serifless"
 
 
