--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1883,7 +1883,7 @@ selectorAffix."cyrl/djeKomi" = "topSerifed"
 rank = 3
 enableIf = [{ body = "toothed" }]
 keyAffix = "serifed"
-descriptionAffix = "serif at top"
+descriptionAffix = "serifs"
 selectorAffix.d = "serifed"
 selectorAffix."d/sansSerif" = "serifless"
 selectorAffix."d/phoneticLeft" = "topSerifed"
@@ -1898,7 +1898,7 @@ selectorAffix."cyrl/djeKomi" = "serifed"
 rank = 3
 enableIf = [{ body = "NOT toothed" }]
 keyAffix = "serifed"
-descriptionAffix = "serif at top"
+descriptionAffix = "serifs"
 selectorAffix.d = "topSerifed"
 selectorAffix."d/sansSerif" = "serifless"
 selectorAffix."d/phoneticLeft" = "topSerifed"
@@ -3765,7 +3765,7 @@ selectorAffix."ue/u" = "serifed"
 [prime.u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 3
 disableIf = [{ body = "NOT toothed" }]
-descriptionAffix = "motion serifs at left side"
+descriptionAffix = "serif at bottom-right"
 selectorAffix.u = "bottomRightSerifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
@@ -7374,6 +7374,9 @@ a = "double-storey-serifless"
 b = "toothed-serifless"
 c = "serifless"
 g = "single-storey-serifless"
+i = "serifed"
+j = "serifed"
+l = "serifed"
 p = "eared-serifless"
 q = "straight-serifless"
 r = "serifless"
@@ -7436,6 +7439,8 @@ tilde = "low"
 asterisk = "penta-high"
 underscore = "high"
 caret = "medium"
+ascii-grave = "straight"
+ascii-single-quote = "straight"
 paren = "normal"
 brace = "curly"
 guillemet = "curly"
@@ -7446,8 +7451,6 @@ dollar = "through"
 cent = "through"
 percent = "rings-segmented-slash"
 bar = "natural-slope"
-ascii-single-quote = "straight"
-ascii-grave = "straight"
 question = "smooth"
 pilcrow = "high"
 partial-derivative = "curly-bar"
@@ -7472,10 +7475,7 @@ digit-form = "lining"
 d = "toothed-serifless"
 e = "flat-crossbar"
 f = "serifless"
-i = "serifed"
-j = "serifed"
 k = "straight-serifless"
-l = "serifed"
 u = "toothed-serifless"
 y = "straight-serifless"
 
@@ -7485,7 +7485,6 @@ d = "tailed-serifless"
 e = "rounded"
 f = "flat-hook-tailed"
 i = "tailed-serifed"
-j = "serifed"
 k = "cursive-serifless"
 l = "tailed-serifed"
 u = "tailed-serifless"
@@ -7659,7 +7658,7 @@ micro-sign = "toothed-serifless"
 
 [composite.ss01.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
-capital-j = "serifed"
+capital-j = "serifed-symmetric"
 capital-k = "straight-serifed"
 capital-g = "toothless-corner-serifed-hooked"
 a = "double-storey-serifed"
@@ -7703,7 +7702,6 @@ capital-c = "unilateral-serifed"
 capital-g = "toothless-rounded-serifed-hooked"
 capital-i = "short-serifed"
 capital-j = "serifless"
-capital-k = "straight-serifless"
 capital-s = "bilateral-serifed"
 capital-t = "serifed"
 capital-x = "straight-serifed"
@@ -7726,6 +7724,7 @@ z = "straight-serifed"
 long-s = "flat-hook-double-serifed"
 eszet = "longs-s-lig-serifless"
 lower-eth = "straight-bar"
+lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight-turn"
 lower-xi = "rounded"
 lower-tau = "short-tailed"
@@ -7758,8 +7757,7 @@ punctuation-dot = "square"
 diacritic-dot = "square"
 
 [composite.ss02.slab-override.design]
-capital-j = "serifed"
-capital-k = "straight-serifed"
+capital-j = "serifed-symmetric"
 a = "double-storey-serifed"
 h = "straight-serifed"
 k = "straight-serifed"
@@ -7843,6 +7841,8 @@ lower-iota = "tailed-serifed"
 lower-tau = "tailed"
 cyrl-zhe = "symmetric-connected"
 cyrl-ka = "symmetric-connected-serifless"
+cyrl-yeri = "round"
+cyrl-yery = "round"
 
 [composite.ss03.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
@@ -7908,7 +7908,9 @@ long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
 lower-chi = "semi-chancery-straight"
 lower-eth = "straight-bar"
+lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight-turn"
+lower-tau = "flat-tailed"
 cyrl-capital-zhe = "straight"
 cyrl-zhe = "straight"
 cyrl-capital-ka = "straight-serifless"
@@ -8021,6 +8023,7 @@ pilcrow = "low"
 micro-sign = "toothed-serifless"
 lig-ltgteq = "slanted"
 lig-equal-chain = "without-notch"
+lig-hyphen-chain = "without-notch"
 
 [composite.ss05.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
@@ -8164,6 +8167,8 @@ long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
 lower-iota = "zshaped"
 lower-lambda = "straight-turn"
+lower-pi = "tailless"
+lower-tau = "tailless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
@@ -8291,19 +8296,19 @@ percent = "dots"
 micro-sign = "toothed-serifless"
 lig-ltgteq = "slanted"
 lig-neq = "slightly-slanted-dotted"
-lig-equal-chain = "with-notch"
-lig-hyphen-chain = "with-notch"
 
 [composite.ss08.italic]
 g = "single-storey-serifless"
 lower-iota = "tailed-serifed"
 lower-tau = "tailed"
+cyrl-yeri = "round"
+cyrl-yery = "round"
 
 [composite.ss08.slab-override.design]
 capital-a = "curly-base-serifed"
 capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-rounded-serifed-hooked"
-capital-j = "serifed"
+capital-j = "serifed-symmetric"
 capital-k = "curly-serifed"
 capital-n = "asymmetric-serifed"
 capital-r = "curly-serifed"
@@ -8399,7 +8404,6 @@ dollar = "open"
 cent = "through-cap"
 bar = "force-upright"
 micro-sign = "tailed-serifless"
-lig-neq = "more-slanted"
 
 [composite.ss09.italic]
 a = "single-storey-serifless"
@@ -8467,12 +8471,15 @@ long-s = "flat-hook-middle-serifed"
 eszet = "sulzbacher-serifless"
 lower-eth = "straight-bar"
 lower-delta = "flat-top"
+lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight"
+lower-tau = "flat-tailed"
 one = "base-flat-top-serif"
 four = "closed"
 eight = "two-circles"
 underscore = "low"
 guillemet = "straight"
+dollar = "through-cap"
 percent = "rings-continuous-slash"
 pilcrow = "low"
 micro-sign = "toothless-rounded-serifless"
@@ -8764,9 +8771,11 @@ long-s = "flat-hook-serifless"
 lower-eth = "straight-bar"
 lower-alpha = "barred"
 lower-delta = "flat-top"
+lower-iota = "serifed-flat-tailed"
 lower-lambda = "straight"
 lower-mu = "toothed-serifless"
 lower-xi = "rounded"
+lower-tau = "flat-tailed"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
 zero = "dotted"
@@ -8787,8 +8796,8 @@ question = "corner-flat-hooked"
 pilcrow = "low"
 micro-sign = "toothed-serifless"
 lig-ltgteq = "slanted"
-lig-neq = "more-slanted"
 lig-equal-chain = "without-notch"
+lig-hyphen-chain = "without-notch"
 
 [composite.ss14.italic]
 f = "flat-hook-tailed"
@@ -8969,7 +8978,6 @@ u = "toothed-serifed"
 y = "straight-turn-serifless"
 long-s = "flat-hook-middle-serifed"
 eszet = "longs-s-lig-middle-serifed"
-lower-eth = "straight-bar"
 lower-thorn = "motion-serifed"
 capital-gamma = "serifed"
 lower-lambda = "straight-turn"
@@ -9058,7 +9066,10 @@ t = "flat-hook"
 y = "straight-turn-serifless"
 eszet = "longs-s-lig-serifless"
 lower-eth = "straight-bar"
+lower-iota = "serifed-flat-tailed"
 lower-lambda = "tailed-turn"
+lower-tau = "flat-tailed"
+lower-chi = "semi-chancery-straight"
 cyrl-capital-ze = "unilateral-inward-serifed"
 cyrl-capital-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-capital-u = "straight-turn-serifless"
