Add Latin Small Letter U with Left Hook.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3653,6 +3653,7 @@ descriptionAffix = "toothed shape"
 selectorAffix.u = "toothed"
 selectorAffix."u/sansSerif" = "toothed"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uHookLeft = "toothed"
 selectorAffix.turnh = "toothed"
 selectorAffix.hookturnh = "toothed"
 selectorAffix.hookturnhrtail = "toothed"
@@ -3672,6 +3673,7 @@ descriptionAffix = "tailed shape"
 selectorAffix.u = "tailed"
 selectorAffix."u/sansSerif" = "tailed"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uHookLeft = "tailed"
 selectorAffix.turnh = "toothed"
 selectorAffix.hookturnh = "toothed"
 selectorAffix.hookturnhrtail = "toothed"
@@ -3691,6 +3693,7 @@ descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.u = "toothlessCorner"
 selectorAffix."u/sansSerif" = "toothlessCorner"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uHookLeft = "toothlessCorner"
 selectorAffix.turnh = "toothed"
 selectorAffix.hookturnh = "toothed"
 selectorAffix.hookturnhrtail = "toothed"
@@ -3710,6 +3713,7 @@ descriptionAffix = "toothless (rounded) shape"
 selectorAffix.u = "toothlessRounded"
 selectorAffix."u/sansSerif" = "toothlessRounded"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uHookLeft = "toothlessRounded"
 selectorAffix.turnh = "toothed"
 selectorAffix.hookturnh = "toothed"
 selectorAffix.hookturnhrtail = "toothed"
@@ -3730,6 +3734,7 @@ descriptionJoiner = "without"
 selectorAffix.u = "serifless"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
+selectorAffix.uHookLeft = "serifless"
 selectorAffix.turnh = "serifless"
 selectorAffix.hookturnh = "serifless"
 selectorAffix.hookturnhrtail = "serifless"
@@ -3749,6 +3754,7 @@ descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.u = "motionSerifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "motionSerifed"
+selectorAffix.uHookLeft = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 selectorAffix.turnh = "motionSerifed"
 selectorAffix.hookturnh = "motionSerifed"
 selectorAffix.hookturnhrtail = "serifless"
@@ -3769,6 +3775,7 @@ descriptionAffix = "serif at bottom-right"
 selectorAffix.u = "bottomRightSerifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
+selectorAffix.uHookLeft = "bottomRightSerifed"
 selectorAffix.turnh = "serifless"
 selectorAffix.hookturnh = "serifless"
 selectorAffix.hookturnhrtail = "serifless"
@@ -3788,6 +3795,7 @@ descriptionAffix = "serifs"
 selectorAffix.u = "serifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifed"
+selectorAffix.uHookLeft = "serifed"
 selectorAffix.turnh = "serifed"
 selectorAffix.hookturnh = "serifed"
 selectorAffix.hookturnhrtail = "serifed"
