--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1111,22 +1111,29 @@ descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
-[prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
+[prime.capital-u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 3
+disableIf = [{ body = "NOT toothed" }]
+descriptionAffix = "serif at bottom-right"
+selectorAffix.U = "bottomRightSerifed"
+selectorAffix."U/sansSerif" = "serifless"
+
+[prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
+rank = 4
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at left side"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bilateral-motion-serifed]
-rank = 4
+rank = 5
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at both sides"
 selectorAffix.U = "bilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifed]
-rank = 5
+rank = 6
 descriptionAffix = "serifs"
 selectorAffix.U = "serifed"
 selectorAffix."U/sansSerif" = "serifless"
@@ -1532,12 +1539,11 @@ selectorAffix."a/single"    = "singleStorey"
 selectorAffix.scripta       = "singleStorey"
 
 [prime.a.variants-buildup.stages.double-storey-hook."*"]
-next = "terminal"
+next = "bar"
 
-[prime.a.variants-buildup.stages.double-storey-hook.hook-serifless]
+[prime.a.variants-buildup.stages.double-storey-hook.normal]
 rank = 1
 keyAffix = ""
-descriptionAffix = "serifless hook"
 selectorAffix.a = ""
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
@@ -1546,20 +1552,19 @@ selectorAffix."a/turnABase" = ""
 selectorAffix."a/single"    = ""
 selectorAffix.scripta       = ""
 
-[prime.a.variants-buildup.stages.double-storey-hook.hook-serifed]
+[prime.a.variants-buildup.stages.double-storey-hook.corner-hooked]
 rank = 2
-keyAffix = "hook-inward-serifed"
-descriptionAffix = "serifed hook"
-selectorAffix.a = "hookInwardSerifed"
-selectorAffix."ae/a" = "hookInwardSerifed"
-selectorAffix."a/sansSerif" = "hookInwardSerifed"
-selectorAffix."a/rtailBase" = "hookInwardSerifed"
-selectorAffix."a/turnABase" = "hookInwardSerifed"
+descriptionAffix = "corner hook shape"
+selectorAffix.a = "cornerHooked"
+selectorAffix."ae/a" = "cornerHooked"
+selectorAffix."a/sansSerif" = "cornerHooked"
+selectorAffix."a/rtailBase" = "cornerHooked"
+selectorAffix."a/turnABase" = "cornerHooked"
 selectorAffix."a/single"    = ""
 selectorAffix.scripta       = ""
 
 [prime.a.variants-buildup.stages.ear."*"]
-next = "terminal"
+next = "bar"
 
 [prime.a.variants-buildup.stages.ear.eared]
 rank = 1
@@ -1594,7 +1599,7 @@ selectorAffix."a/turnABase" = ""
 selectorAffix."a/single"    = "earlessRounded"
 selectorAffix.scripta       = ""
 
-[prime.a.variants-buildup.stages.terminal.serifless]
+[prime.a.variants-buildup.stages.bar.serifless]
 rank = 1
 descriptionAffix = "serif at terminal"
 descriptionJoiner = "without"
@@ -1606,8 +1611,31 @@ selectorAffix."a/turnABase" = "serifless"
 selectorAffix."a/single"    = "serifless"
 selectorAffix.scripta       = "serifless"
 
-[prime.a.variants-buildup.stages.terminal.tailed]
+[prime.a.variants-buildup.stages.bar.serifed]
 rank = 2
+descriptionAffix = "serif at terminal"
+selectorAffix.a = "serifed"
+selectorAffix."ae/a" = "serifless"
+selectorAffix."a/sansSerif" = "serifless"
+selectorAffix."a/rtailBase" = "serifless"
+selectorAffix."a/turnABase" = "serifed"
+selectorAffix."a/single"    = "serifed"
+selectorAffix.scripta       = "serifed"
+
+[prime.a.variants-buildup.stages.bar.double-serifed]
+rank = 3
+disableIf = [{ storey = "double-storey" }, { ear = "NOT eared" }]
+descriptionAffix = "serifs at top and bottom"
+selectorAffix.a = "doubleSerifed"
+selectorAffix."ae/a" = "serifless"
+selectorAffix."a/sansSerif" = "serifless"
+selectorAffix."a/rtailBase" = "topSerifed"
+selectorAffix."a/turnABase" = "serifed"
+selectorAffix."a/single"    = "doubleSerifed"
+selectorAffix.scripta       = "serifed"
+
+[prime.a.variants-buildup.stages.bar.tailed]
+rank = 4
 descriptionAffix = "curly tail"
 selectorAffix.a = "tailed"
 selectorAffix."ae/a" = "serifless"
@@ -1617,8 +1645,20 @@ selectorAffix."a/turnABase" = "tailed"
 selectorAffix."a/single"    = "tailed"
 selectorAffix.scripta       = "tailed"
 
-[prime.a.variants-buildup.stages.terminal.toothless-corner]
-rank = 3
+[prime.a.variants-buildup.stages.bar.tailed-serifed]
+rank = 5
+disableIf = [{ storey = "double-storey" }, { ear = "NOT eared" }]
+descriptionAffix = "curly tail; with serifs at top and bottom"
+selectorAffix.a = "tailedSerifed"
+selectorAffix."ae/a" = "serifless"
+selectorAffix."a/sansSerif" = "tailed"
+selectorAffix."a/rtailBase" = "topSerifed"
+selectorAffix."a/turnABase" = "tailed"
+selectorAffix."a/single"    = "tailedSerifed"
+selectorAffix.scripta       = "tailed"
+
+[prime.a.variants-buildup.stages.bar.toothless-corner]
+rank = 6
 disableIf = [{ storey = "single-storey" }]
 descriptionAffix = "toothless (cornered bottom-right)"
 selectorAffix.a = "toothlessCorner"
@@ -1629,8 +1669,8 @@ selectorAffix."a/turnABase" = "toothlessCorner"
 selectorAffix."a/single"    = "serifless"
 selectorAffix.scripta       = "serifless"
 
-[prime.a.variants-buildup.stages.terminal.toothless-rounded]
-rank = 4
+[prime.a.variants-buildup.stages.bar.toothless-rounded]
+rank = 7
 disableIf = [{ storey = "single-storey" }]
 descriptionAffix = "toothless (rounded bottom-right)"
 selectorAffix.a = "toothlessRounded"
@@ -1640,17 +1680,6 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessRounded"
 selectorAffix."a/single"    = "serifless"
 selectorAffix.scripta       = "serifless"
-
-[prime.a.variants-buildup.stages.terminal.serifed]
-rank = 5
-descriptionAffix = "serif at terminal"
-selectorAffix.a = "serifed"
-selectorAffix."ae/a" = "serifless"
-selectorAffix."a/sansSerif" = "serifless"
-selectorAffix."a/rtailBase" = "serifless"
-selectorAffix."a/turnABase" = "serifed"
-selectorAffix."a/single"    = "serifed"
-selectorAffix.scripta       = "serifed"
 
 
 
@@ -1879,8 +1908,22 @@ selectorAffix.dHookTop = "serifless"
 selectorAffix."dHookTop/hookBottomBase" = "serifless"
 selectorAffix."cyrl/djeKomi" = "topSerifed"
 
-[prime.d.variants-buildup.stages.serifs.serifed__toothed]
+[prime.d.variants-buildup.stages.serifs.bottom-serifed]
 rank = 3
+enableIf = [{ body = "toothed" }]
+descriptionAffix = "serif at bottom"
+selectorAffix.d = "bottomSerifed"
+selectorAffix."d/sansSerif" = "serifless"
+selectorAffix."d/phoneticLeft" = "serifless"
+selectorAffix."d/descBase" = "serifless"
+selectorAffix."d/hookBottomBase" = "serifless"
+selectorAffix.dCurlyTail = "serifless"
+selectorAffix.dHookTop = "bottomSerifed"
+selectorAffix."dHookTop/hookBottomBase" = "serifless"
+selectorAffix."cyrl/djeKomi" = "bottomSerifed"
+
+[prime.d.variants-buildup.stages.serifs.serifed__toothed]
+rank = 4
 enableIf = [{ body = "toothed" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -1895,7 +1938,7 @@ selectorAffix."dHookTop/hookBottomBase" = "serifless"
 selectorAffix."cyrl/djeKomi" = "serifed"
 
 [prime.d.variants-buildup.stages.serifs.serifed__toothless]
-rank = 3
+rank = 4
 enableIf = [{ body = "NOT toothed" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -3278,8 +3321,17 @@ selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "serifless"
 selectorAffix.qRTail = "serifless"
 
-[prime.q.variants-buildup.stages.serifs.motion-serifed]
+[prime.q.variants-buildup.stages.serifs.bottom-serifed]
 rank = 2
+enableIf = [{ body = "eared", terminal = "straight" }]
+descriptionAffix = "serif at bottom"
+selectorAffix.q = "bottomSerifed"
+selectorAffix."q/sansSerif" = "serifless"
+selectorAffix."q/hookTopBase" = "bottomSerifed"
+selectorAffix.qRTail = "serifless"
+
+[prime.q.variants-buildup.stages.serifs.motion-serifed]
+rank = 3
 enableIf = [{ body = "eared" }]
 descriptionAffix = "motion serifs"
 selectorAffix.q = "motionSerifed"
@@ -3288,7 +3340,7 @@ selectorAffix."q/hookTopBase" = "serifless"
 selectorAffix.qRTail = "motionSerifed"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eared]
-rank = 3
+rank = 4
 enableIf = [{ body = "eared", terminal = "straight" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -3298,7 +3350,7 @@ selectorAffix."q/hookTopBase" = "bottomSerifed"
 selectorAffix.qRTail = "motionSerifed"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eareless]
-rank = 3
+rank = 4
 enableIf = [{ body = "NOT eared", terminal = "straight" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -4556,7 +4608,7 @@ selectorAffix."grek/alpha" = "singleStorey"
 selectorAffix."grek/alpha/sansSerif" = "singleStorey"
 
 [prime.lower-alpha.variants-buildup.stages.ear."*"]
-next = "terminal"
+next = "bar"
 
 [prime.lower-alpha.variants-buildup.stages.ear.eared]
 rank = 1
@@ -4576,23 +4628,37 @@ descriptionAffix = "earless (rounded top-right)"
 selectorAffix."grek/alpha" = "earlessRounded"
 selectorAffix."grek/alpha/sansSerif" = "earlessRounded"
 
-[prime.lower-alpha.variants-buildup.stages.terminal.serifless]
+[prime.lower-alpha.variants-buildup.stages.bar.serifless]
 rank = 1
 keyAffix = ""
 selectorAffix."grek/alpha" = "serifless"
 selectorAffix."grek/alpha/sansSerif" = "serifless"
 
-[prime.lower-alpha.variants-buildup.stages.terminal.tailed]
+[prime.lower-alpha.variants-buildup.stages.bar.serifed]
 rank = 2
+descriptionAffix = "serif at terminal"
+selectorAffix."grek/alpha" = "serifed"
+selectorAffix."grek/alpha/sansSerif" = "serifless"
+
+[prime.lower-alpha.variants-buildup.stages.bar.double-serifed]
+rank = 3
+disableIf = [{ ear = "NOT eared" }]
+descriptionAffix = "serifs at top and bottom"
+selectorAffix."grek/alpha" = "doubleSerifed"
+selectorAffix."grek/alpha/sansSerif" = "serifless"
+
+[prime.lower-alpha.variants-buildup.stages.bar.tailed]
+rank = 4
 descriptionAffix = "curly tail"
 selectorAffix."grek/alpha" = "tailed"
 selectorAffix."grek/alpha/sansSerif" = "tailed"
 
-[prime.lower-alpha.variants-buildup.stages.terminal.serifed]
-rank = 3
-descriptionAffix = "serif at terminal"
-selectorAffix."grek/alpha" = "serifed"
-selectorAffix."grek/alpha/sansSerif" = "serifless"
+[prime.lower-alpha.variants-buildup.stages.bar.tailed-serifed]
+rank = 5
+disableIf = [{ ear = "NOT eared" }]
+descriptionAffix = "curly tail; with serifs at top and bottom"
+selectorAffix."grek/alpha" = "tailedSerifed"
+selectorAffix."grek/alpha/sansSerif" = "tailed"
 
 
 
