revert name change

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1541,9 +1541,10 @@ selectorAffix.scripta       = "singleStorey"
 [prime.a.variants-buildup.stages.double-storey-hook."*"]
 next = "bar"
 
-[prime.a.variants-buildup.stages.double-storey-hook.normal]
+[prime.a.variants-buildup.stages.double-storey-hook.hook-serifless]
 rank = 1
 keyAffix = ""
+descriptionAffix = "serifless hook"
 selectorAffix.a = ""
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
@@ -1552,14 +1553,15 @@ selectorAffix."a/turnABase" = ""
 selectorAffix."a/single"    = ""
 selectorAffix.scripta       = ""
 
-[prime.a.variants-buildup.stages.double-storey-hook.corner-hooked]
+[prime.a.variants-buildup.stages.double-storey-hook.hook-serifed]
 rank = 2
-descriptionAffix = "corner hook shape"
-selectorAffix.a = "cornerHooked"
-selectorAffix."ae/a" = "cornerHooked"
-selectorAffix."a/sansSerif" = "cornerHooked"
-selectorAffix."a/rtailBase" = "cornerHooked"
-selectorAffix."a/turnABase" = "cornerHooked"
+keyAffix = "hook-inward-serifed"
+descriptionAffix = "serifed hook"
+selectorAffix.a = "hookInwardSerifed"
+selectorAffix."ae/a" = "hookInwardSerifed"
+selectorAffix."a/sansSerif" = "hookInwardSerifed"
+selectorAffix."a/rtailBase" = "hookInwardSerifed"
+selectorAffix."a/turnABase" = "hookInwardSerifed"
 selectorAffix."a/single"    = ""
 selectorAffix.scripta       = ""
 
