Add double-serifed/serifed-tailed variants for `a`/`α`, add bottom{-right}-serifed variants for `d`/`q`/`U`. (#2104)
* Add serif variants for `U`, `a`, `d`, `q`, and `α`

Closes #1949 .

Also change of variant name:

* `a`.`hook-inward-serifed` → `a`.`corner-hooked`

to match `r`.`corner-hooked`.

* revert name change

* Attempt to combat new unused `a` variants.

* cont.

* reshuffle `d` variants for consistency.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1111,22 +1111,29 @@ descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
-[prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
+[prime.capital-u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 3
+disableIf = [{ body = "NOT toothed" }]
+descriptionAffix = "serif at bottom-right"
+selectorAffix.U = "bottomRightSerifed"
+selectorAffix."U/sansSerif" = "serifless"
+
+[prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
+rank = 4
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at left side"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bilateral-motion-serifed]
-rank = 4
+rank = 5
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at both sides"
 selectorAffix.U = "bilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifed]
-rank = 5
+rank = 6
 descriptionAffix = "serifs"
 selectorAffix.U = "serifed"
 selectorAffix."U/sansSerif" = "serifless"
@@ -1532,7 +1539,7 @@ selectorAffix."a/single"    = "singleStorey"
 selectorAffix.scripta       = "singleStorey"
 
 [prime.a.variants-buildup.stages.double-storey-hook."*"]
-next = "terminal"
+next = "bar"
 
 [prime.a.variants-buildup.stages.double-storey-hook.hook-serifless]
 rank = 1
@@ -1559,7 +1566,7 @@ selectorAffix."a/single"    = ""
 selectorAffix.scripta       = ""
 
 [prime.a.variants-buildup.stages.ear."*"]
-next = "terminal"
+next = "bar"
 
 [prime.a.variants-buildup.stages.ear.eared]
 rank = 1
@@ -1594,7 +1601,7 @@ selectorAffix."a/turnABase" = ""
 selectorAffix."a/single"    = "earlessRounded"
 selectorAffix.scripta       = ""
 
-[prime.a.variants-buildup.stages.terminal.serifless]
+[prime.a.variants-buildup.stages.bar.serifless]
 rank = 1
 descriptionAffix = "serif at terminal"
 descriptionJoiner = "without"
@@ -1606,8 +1613,31 @@ selectorAffix."a/turnABase" = "serifless"
 selectorAffix."a/single"    = "serifless"
 selectorAffix.scripta       = "serifless"
 
-[prime.a.variants-buildup.stages.terminal.tailed]
+[prime.a.variants-buildup.stages.bar.serifed]
 rank = 2
+descriptionAffix = "serif at terminal"
+selectorAffix.a = "serifed"
+selectorAffix."ae/a" = "serifless"
+selectorAffix."a/sansSerif" = "serifless"
+selectorAffix."a/rtailBase" = "serifless"
+selectorAffix."a/turnABase" = "serifed"
+selectorAffix."a/single"    = "serifed"
+selectorAffix.scripta       = "serifed"
+
+[prime.a.variants-buildup.stages.bar.double-serifed]
+rank = 3
+disableIf = [{ storey = "double-storey" }, { ear = "NOT eared" }]
+descriptionAffix = "serifs at top and bottom"
+selectorAffix.a = "doubleSerifed"
+selectorAffix."ae/a" = "serifless"
+selectorAffix."a/sansSerif" = "serifless"
+selectorAffix."a/rtailBase" = "topSerifed"
+selectorAffix."a/turnABase" = "serifed"
+selectorAffix."a/single"    = "doubleSerifed"
+selectorAffix.scripta       = "serifed"
+
+[prime.a.variants-buildup.stages.bar.tailed]
+rank = 4
 descriptionAffix = "curly tail"
 selectorAffix.a = "tailed"
 selectorAffix."ae/a" = "serifless"
@@ -1617,8 +1647,20 @@ selectorAffix."a/turnABase" = "tailed"
 selectorAffix."a/single"    = "tailed"
 selectorAffix.scripta       = "tailed"
 
-[prime.a.variants-buildup.stages.terminal.toothless-corner]
-rank = 3
+[prime.a.variants-buildup.stages.bar.tailed-serifed]
+rank = 5
+disableIf = [{ storey = "double-storey" }, { ear = "NOT eared" }]
+descriptionAffix = "curly tail; with serifs at top and bottom"
+selectorAffix.a = "tailedSerifed"
+selectorAffix."ae/a" = "serifless"
+selectorAffix."a/sansSerif" = "tailed"
+selectorAffix."a/rtailBase" = "topSerifed"
+selectorAffix."a/turnABase" = "tailed"
+selectorAffix."a/single"    = "tailedSerifed"
+selectorAffix.scripta       = "tailed"
+
+[prime.a.variants-buildup.stages.bar.toothless-corner]
+rank = 6
 disableIf = [{ storey = "single-storey" }]
 descriptionAffix = "toothless (cornered bottom-right)"
 selectorAffix.a = "toothlessCorner"
@@ -1629,8 +1671,8 @@ selectorAffix."a/turnABase" = "toothlessCorner"
 selectorAffix."a/single"    = "serifless"
 selectorAffix.scripta       = "serifless"
 
-[prime.a.variants-buildup.stages.terminal.toothless-rounded]
-rank = 4
+[prime.a.variants-buildup.stages.bar.toothless-rounded]
+rank = 7
 disableIf = [{ storey = "single-storey" }]
 descriptionAffix = "toothless (rounded bottom-right)"
 selectorAffix.a = "toothlessRounded"
@@ -1640,17 +1682,6 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessRounded"
 selectorAffix."a/single"    = "serifless"
 selectorAffix.scripta       = "serifless"
-
-[prime.a.variants-buildup.stages.terminal.serifed]
-rank = 5
-descriptionAffix = "serif at terminal"
-selectorAffix.a = "serifed"
-selectorAffix."ae/a" = "serifless"
-selectorAffix."a/sansSerif" = "serifless"
-selectorAffix."a/rtailBase" = "serifless"
-selectorAffix."a/turnABase" = "serifed"
-selectorAffix."a/single"    = "serifed"
-selectorAffix.scripta       = "serifed"
 
 
 
@@ -1812,8 +1843,21 @@ selectorAffix.dHookTop = "toothed"
 selectorAffix."dHookTop/hookBottomBase" = "toothed"
 selectorAffix."cyrl/djeKomi" = "toothed"
 
-[prime.d.variants-buildup.stages.body.toothless-corner]
+[prime.d.variants-buildup.stages.body.tailed]
 rank = 2
+descriptionAffix = "tailed shape"
+selectorAffix.d = "tailed"
+selectorAffix."d/sansSerif" = "tailed"
+selectorAffix."d/phoneticLeft" = "toothed"
+selectorAffix."d/descBase" = "toothed"
+selectorAffix."d/hookBottomBase" = "toothed"
+selectorAffix.dCurlyTail = "toothed"
+selectorAffix.dHookTop = "tailed"
+selectorAffix."dHookTop/hookBottomBase" = "toothed"
+selectorAffix."cyrl/djeKomi" = "toothed"
+
+[prime.d.variants-buildup.stages.body.toothless-corner]
+rank = 3
 descriptionAffix = "toothless (cornered) shape"
 selectorAffix.d = "toothlessCorner"
 selectorAffix."d/sansSerif" = "toothlessCorner"
@@ -1826,7 +1870,7 @@ selectorAffix."dHookTop/hookBottomBase" = "toothlessCornerHBB"
 selectorAffix."cyrl/djeKomi" = "toothlessRounded"
 
 [prime.d.variants-buildup.stages.body.toothless-rounded]
-rank = 3
+rank = 4
 descriptionAffix = "toothless (rounded) shape"
 selectorAffix.d = "toothlessRounded"
 selectorAffix."d/sansSerif" = "toothlessRounded"
@@ -1837,19 +1881,6 @@ selectorAffix.dCurlyTail = "toothed"
 selectorAffix.dHookTop = "toothlessRounded"
 selectorAffix."dHookTop/hookBottomBase" = "toothed"
 selectorAffix."cyrl/djeKomi" = "toothlessRounded"
-
-[prime.d.variants-buildup.stages.body.tailed]
-rank = 4
-descriptionAffix = "tailed shape"
-selectorAffix.d = "tailed"
-selectorAffix."d/sansSerif" = "tailed"
-selectorAffix."d/phoneticLeft" = "toothed"
-selectorAffix."d/descBase" = "toothed"
-selectorAffix."d/hookBottomBase" = "toothed"
-selectorAffix.dCurlyTail = "toothed"
-selectorAffix.dHookTop = "tailed"
-selectorAffix."dHookTop/hookBottomBase" = "toothed"
-selectorAffix."cyrl/djeKomi" = "toothed"
 
 [prime.d.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -1879,8 +1910,22 @@ selectorAffix.dHookTop = "serifless"
 selectorAffix."dHookTop/hookBottomBase" = "serifless"
 selectorAffix."cyrl/djeKomi" = "topSerifed"
 
-[prime.d.variants-buildup.stages.serifs.serifed__toothed]
+[prime.d.variants-buildup.stages.serifs.bottom-serifed]
 rank = 3
+enableIf = [{ body = "toothed" }]
+descriptionAffix = "serif at bottom"
+selectorAffix.d = "bottomSerifed"
+selectorAffix."d/sansSerif" = "serifless"
+selectorAffix."d/phoneticLeft" = "serifless"
+selectorAffix."d/descBase" = "serifless"
+selectorAffix."d/hookBottomBase" = "serifless"
+selectorAffix.dCurlyTail = "serifless"
+selectorAffix.dHookTop = "bottomSerifed"
+selectorAffix."dHookTop/hookBottomBase" = "serifless"
+selectorAffix."cyrl/djeKomi" = "bottomSerifed"
+
+[prime.d.variants-buildup.stages.serifs.serifed__toothed]
+rank = 4
 enableIf = [{ body = "toothed" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -1895,7 +1940,7 @@ selectorAffix."dHookTop/hookBottomBase" = "serifless"
 selectorAffix."cyrl/djeKomi" = "serifed"
 
 [prime.d.variants-buildup.stages.serifs.serifed__toothless]
-rank = 3
+rank = 4
 enableIf = [{ body = "NOT toothed" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -3278,8 +3323,17 @@ selectorAffix."q/sansSerif" = "serifless"
 selectorAffix."q/hookTopBase" = "serifless"
 selectorAffix.qRTail = "serifless"
 
-[prime.q.variants-buildup.stages.serifs.motion-serifed]
+[prime.q.variants-buildup.stages.serifs.bottom-serifed]
 rank = 2
+enableIf = [{ body = "eared", terminal = "straight" }]
+descriptionAffix = "serif at bottom"
+selectorAffix.q = "bottomSerifed"
+selectorAffix."q/sansSerif" = "serifless"
+selectorAffix."q/hookTopBase" = "bottomSerifed"
+selectorAffix.qRTail = "serifless"
+
+[prime.q.variants-buildup.stages.serifs.motion-serifed]
+rank = 3
 enableIf = [{ body = "eared" }]
 descriptionAffix = "motion serifs"
 selectorAffix.q = "motionSerifed"
@@ -3288,7 +3342,7 @@ selectorAffix."q/hookTopBase" = "serifless"
 selectorAffix.qRTail = "motionSerifed"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eared]
-rank = 3
+rank = 4
 enableIf = [{ body = "eared", terminal = "straight" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -3298,7 +3352,7 @@ selectorAffix."q/hookTopBase" = "bottomSerifed"
 selectorAffix.qRTail = "motionSerifed"
 
 [prime.q.variants-buildup.stages.serifs.serifed__eareless]
-rank = 3
+rank = 4
 enableIf = [{ body = "NOT eared", terminal = "straight" }]
 keyAffix = "serifed"
 descriptionAffix = "serifs"
@@ -4556,7 +4610,7 @@ selectorAffix."grek/alpha" = "singleStorey"
 selectorAffix."grek/alpha/sansSerif" = "singleStorey"
 
 [prime.lower-alpha.variants-buildup.stages.ear."*"]
-next = "terminal"
+next = "bar"
 
 [prime.lower-alpha.variants-buildup.stages.ear.eared]
 rank = 1
@@ -4576,23 +4630,37 @@ descriptionAffix = "earless (rounded top-right)"
 selectorAffix."grek/alpha" = "earlessRounded"
 selectorAffix."grek/alpha/sansSerif" = "earlessRounded"
 
-[prime.lower-alpha.variants-buildup.stages.terminal.serifless]
+[prime.lower-alpha.variants-buildup.stages.bar.serifless]
 rank = 1
 keyAffix = ""
 selectorAffix."grek/alpha" = "serifless"
 selectorAffix."grek/alpha/sansSerif" = "serifless"
 
-[prime.lower-alpha.variants-buildup.stages.terminal.tailed]
+[prime.lower-alpha.variants-buildup.stages.bar.serifed]
 rank = 2
+descriptionAffix = "serif at terminal"
+selectorAffix."grek/alpha" = "serifed"
+selectorAffix."grek/alpha/sansSerif" = "serifless"
+
+[prime.lower-alpha.variants-buildup.stages.bar.double-serifed]
+rank = 3
+disableIf = [{ ear = "NOT eared" }]
+descriptionAffix = "serifs at top and bottom"
+selectorAffix."grek/alpha" = "doubleSerifed"
+selectorAffix."grek/alpha/sansSerif" = "serifless"
+
+[prime.lower-alpha.variants-buildup.stages.bar.tailed]
+rank = 4
 descriptionAffix = "curly tail"
 selectorAffix."grek/alpha" = "tailed"
 selectorAffix."grek/alpha/sansSerif" = "tailed"
 
-[prime.lower-alpha.variants-buildup.stages.terminal.serifed]
-rank = 3
-descriptionAffix = "serif at terminal"
-selectorAffix."grek/alpha" = "serifed"
-selectorAffix."grek/alpha/sansSerif" = "serifless"
+[prime.lower-alpha.variants-buildup.stages.bar.tailed-serifed]
+rank = 5
+disableIf = [{ ear = "NOT eared" }]
+descriptionAffix = "curly tail; with serifs at top and bottom"
+selectorAffix."grek/alpha" = "tailedSerifed"
+selectorAffix."grek/alpha/sansSerif" = "tailed"
 
 
 
