Harmonize italic slab forms for `a`, `g`, and `q`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1621,7 +1621,7 @@ selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "serifed"
-selectorAffix."a/single"    = "serifed"
+selectorAffix."a/single"    = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
 selectorAffix.scripta       = "serifed"
 
 [prime.a.variants-buildup.stages.bar.double-serifed]
@@ -7479,6 +7479,7 @@ capital-z = "straight-serifless"
 a = "double-storey-serifless"
 b = "toothed-serifless"
 c = "serifless"
+e = "flat-crossbar"
 g = "single-storey-serifless"
 i = "serifed"
 j = "serifed"
@@ -7580,7 +7581,6 @@ digit-form = "lining"
 
 [default.upright-oblique]
 d = "toothed-serifless"
-e = "flat-crossbar"
 f = "serifless"
 k = "straight-serifless"
 u = "toothed-serifless"
@@ -7635,6 +7635,7 @@ c = "unilateral-serifed"
 g = "single-storey-serifed"
 p = "eared-serifed"
 q = "straight-serifed"
+r = "serifed"
 s = "bilateral-serifed"
 v = "straight-serifed"
 w = "straight-serifed"
@@ -7671,12 +7672,11 @@ h = "straight-serifed"
 k = "straight-serifed"
 m = "serifed"
 n = "straight-serifed"
-r = "serifed"
 u = "toothed-serifed"
 y = "straight-turn-serifed"
 
 [composite.slab.italic]
-a = "single-storey-tailed"
+a = "single-storey-tailed-serifed"
 d = "tailed-serifed"
 c = "unilateral-inward-serifed"
 f = "flat-hook-tailed"
@@ -7972,7 +7972,7 @@ cyrl-ef = "serifed"
 micro-sign = "tailed-serifed"
 
 [composite.ss03.slab-override.italic]
-a = "single-storey-serifed"
+a = "single-storey-double-serifed"
 f = "flat-hook-tailed"
 g = "single-storey-serifed"
 k = "cursive-top-left-serifed"
@@ -8536,7 +8536,7 @@ seven = "bend-serifed"
 micro-sign = "tailed-serifed"
 
 [composite.ss09.slab-override.italic]
-a = "single-storey-serifed"
+a = "single-storey-double-serifed"
 g = "single-storey-serifed"
 i = "tailed-serifed"
 k = "straight-top-left-serifed"
@@ -8920,7 +8920,7 @@ w = "straight-flat-top-serifed"
 y = "straight-serifed"
 z = "straight-serifed"
 long-s = "flat-hook-bottom-serifed"
-lower-alpha = "barred-serifed"
+lower-alpha = "barred-double-serifed"
 lower-mu = "toothed-serifed"
 cyrl-capital-u = "straight-serifed"
 cyrl-u = "straight-serifed"
@@ -8934,7 +8934,7 @@ w = "straight-flat-top-motion-serifed"
 x = "straight-motion-serifed"
 y = "cursive-flat-hook-motion-serifed"
 long-s = "flat-hook-tailed"
-lower-alpha = "barred-tailed"
+lower-alpha = "barred-tailed-serifed"
 lower-mu = "toothed-motion-serifed"
 cyrl-u = "cursive-flat-hook-motion-serifed"
 micro-sign = "toothed-motion-serifed"
@@ -9034,6 +9034,7 @@ cyrl-ya = "straight-serifed"
 micro-sign = "toothed-serifed"
 
 [composite.ss15.slab-override.italic]
+a = "single-storey-tailed-serifed"
 g = "single-storey-serifed"
 k = "diagonal-tailed-cursive-top-left-serifed"
 u = "toothed-motion-serifed"
@@ -9247,6 +9248,7 @@ micro-sign = "tailed-serifed"
 
 [composite.ss17.slab-override.italic]
 capital-u = "toothed-motion-serifed"
+a = "single-storey-tailed-serifed"
 b = "toothless-corner-serifed"
 g = "single-storey-serifed"
 h = "tailed-motion-serifed"
@@ -9328,6 +9330,7 @@ y = "straight-turn-serifed"
 z = "straight-serifed"
 long-s = "flat-hook-double-serifed-xh"
 eszet = "longs-s-lig-bottom-serifed"
+lower-alpha = "barred-tailed-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
