--- a/packages/font-glyphs/package.json
+++ b/packages/font-glyphs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/font-glyphs",
-  "version": "28.0.0",
+  "version": "28.0.0-beta.3",
   "private": true,
   "exports": {
     ".": "./src/index.mjs",
@@ -8,11 +8,11 @@
     "./unicode-knowledge": "./src/meta/unicode-knowledge.mjs"
   },
   "dependencies": {
-    "@iosevka/font-kits": "28.0.0",
-    "@iosevka/geometry": "28.0.0",
-    "@iosevka/geometry-cache": "28.0.0",
-    "@iosevka/glyph": "28.0.0",
-    "@iosevka/util": "28.0.0",
+    "@iosevka/font-kits": "28.0.0-beta.3",
+    "@iosevka/geometry": "28.0.0-beta.3",
+    "@iosevka/geometry-cache": "28.0.0-beta.3",
+    "@iosevka/glyph": "28.0.0-beta.3",
+    "@iosevka/util": "28.0.0-beta.3",
     "typo-geom": "^0.13.1"
   }
 }
