--- a/packages/font-otl/package.json
+++ b/packages/font-otl/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@iosevka/font-otl",
-  "version": "28.0.0",
+  "version": "28.0.0-beta.3",
   "private": true,
   "exports": {
     ".": "./src/index.mjs"
   },
   "dependencies": {
-    "@iosevka/font-glyphs": "28.0.0",
-    "@iosevka/glyph": "28.0.0",
+    "@iosevka/font-glyphs": "28.0.0-beta.3",
+    "@iosevka/glyph": "28.0.0-beta.3",
     "toposort": "^2.0.2"
   }
 }
