--- a/packages/font/package.json
+++ b/packages/font/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/font",
-  "version": "28.0.0",
+  "version": "28.0.0-beta.3",
   "private": true,
   "exports": {
     ".": "./src/index.mjs",
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@iosevka/font-glyphs": "28.0.0",
-    "@iosevka/font-otl": "28.0.0",
-    "@iosevka/geometry": "28.0.0",
-    "@iosevka/geometry-cache": "28.0.0",
-    "@iosevka/glyph": "28.0.0",
-    "@iosevka/param": "28.0.0",
-    "@iosevka/util": "28.0.0",
+    "@iosevka/font-glyphs": "28.0.0-beta.3",
+    "@iosevka/font-otl": "28.0.0-beta.3",
+    "@iosevka/geometry": "28.0.0-beta.3",
+    "@iosevka/geometry-cache": "28.0.0-beta.3",
+    "@iosevka/glyph": "28.0.0-beta.3",
+    "@iosevka/param": "28.0.0-beta.3",
+    "@iosevka/util": "28.0.0-beta.3",
     "harfbuzzjs": "^0.3.3",
     "ot-builder": "^1.7.3",
     "semver": "^7.5.4",
