--- a/packages/geometry-cache/package.json
+++ b/packages/geometry-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/geometry-cache",
-  "version": "28.0.0",
+  "version": "28.0.0-beta.3",
   "private": true,
   "exports": {
     ".": "./src/index.mjs"
