--- a/tools/data-export/package.json
+++ b/tools/data-export/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/data-export",
-  "version": "28.0.0",
+  "version": "28.0.0-beta.3",
   "private": true,
   "exports": {
     ".": "./src/index.mjs",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@iosevka/param": "28.0.0",
+    "@iosevka/param": "28.0.0-beta.3",
     "@unicode/unicode-15.0.0": "^1.5.2",
     "cldr": "^7.5.0"
   }
