--- a/tools/misc/package.json
+++ b/tools/misc/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@iosevka/misc",
-  "version": "28.0.0",
+  "version": "28.0.0-beta.3",
   "private": true,
   "dependencies": {
     "semver": "^7.5.4",
     "wawoff2": "^2.0.1",
-    "@iosevka/util": "28.0.0"
+    "@iosevka/util": "28.0.0-beta.3"
   }
 }
