--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/monorepo",
-  "version": "28.0.0-beta.3",
+  "version": "28.0.0",
   "workspaces": [
     "packages/*",
     "tools/*"
