--- a/packages/font-kits/package.json
+++ b/packages/font-kits/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@iosevka/font-kits",
-  "version": "28.0.0-beta.3",
+  "version": "28.0.0",
   "private": true,
   "exports": {
     "./boole-kit": "./src/boole-kit.mjs",
     "./spiro-kit": "./src/spiro-kit.mjs"
   },
   "dependencies": {
-    "@iosevka/geometry": "28.0.0-beta.3",
-    "@iosevka/glyph": "28.0.0-beta.3",
-    "@iosevka/util": "28.0.0-beta.3",
+    "@iosevka/geometry": "28.0.0",
+    "@iosevka/glyph": "28.0.0",
+    "@iosevka/util": "28.0.0",
     "spiro": "^3.0.0",
     "typo-geom": "^0.13.1"
   }
