--- a/packages/geometry/package.json
+++ b/packages/geometry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/geometry",
-  "version": "28.0.0-beta.3",
+  "version": "28.0.0",
   "private": true,
   "exports": {
     ".": "./src/index.mjs",
@@ -12,7 +12,7 @@
     "./spiro-control": "./src/spiro-control.mjs"
   },
   "dependencies": {
-    "@iosevka/util": "28.0.0-beta.3",
+    "@iosevka/util": "28.0.0",
     "spiro": "^3.0.0",
     "typo-geom": "^0.13.1"
   }
