--- a/packages/glyph/package.json
+++ b/packages/glyph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iosevka/glyph",
-  "version": "28.0.0-beta.3",
+  "version": "28.0.0",
   "private": true,
   "exports": {
     ".": "./src/glyph.mjs",
@@ -9,7 +9,7 @@
     "./relation": "./src/relation.mjs"
   },
   "dependencies": {
-    "@iosevka/geometry": "28.0.0-beta.3",
+    "@iosevka/geometry": "28.0.0",
     "spiro": "^3.0.0",
     "typo-geom": "^0.13.1"
   }
